# trippy

./: README.md
backend/: README.md  pyproject.toml
backend/src/backend/: crew.py  main.py
backend/src/backend/config/: agents.yaml  tasks.yaml
backend/src/backend/tools/: custom_tool.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: DarkModeToggle.tsx  Footer.tsx  Header.tsx  Hero.tsx  ResultsDisplay.tsx  UserInputForm.tsx
