[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.2"}

[tool.poetry.scripts]
backend = "backend.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"